--- a/harry-potter/package.json
+++ b/harry-potter/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "firebase": "^5.5.0",
+    "sweetalert2": "^7.26.29",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
